--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./node_modules/@ckeditor/ckeditor5-build-classic/build/ckeditor.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
